--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gapi-script": "^1.2.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dotenv": "^0.1.3",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-redux": "^8.0.1",
@@ -22,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-dotenv && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,6 +33,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL"
     ]
   },
   "browserslist": {
